TestSuite/PascalABCTests/errors/err0532.pas
//!Операции нельзя вызывать, используя данный синтаксис
begin
  Writeln(string.operator*=);
end.